# Sim

./: CMakeLists.txt  README.md  adder_od.txt  main.cpp
include/: Core.hpp  Decoder.hpp  Executor.hpp  Instruction.hpp  Memory.hpp  Mnemonic.hpp
src/: Core.cpp  Decoder.cpp  Executor.cpp  Instruction.cpp
test/: test.cpp
